# ppt-maker

./: .gitignore  README.md  repro_test.py  reproduction.md  slide_blueprint.json
Sample Files/: slide_blueprint.json
Sample Files/Accenture Tech Acquisition Analysis/: slide_blueprint.json
backend/: pyproject.toml  slide_blueprint.json  template_analysis.json
backend/exports/: b66334f2-2a79-43f2-b46f-47381b1c5799.artifacts  dc8f8b9c-3dd9-4b23-b6fa-786cfb7a4636.artifacts
backend/scratch/: analyze_margins.py  analyze_mistakes.py  analyze_samples.py  check_routes.py  verify_zip.py  verify_zip_v2.py
backend/scripts/: analyze_reference_decks.py
backend/src/md2deck/: __init__.py  __main__.py  api.py  canva_client.py  cli.py  config.py  models.py  pipeline.py  templates_meta.json  thumbnailer.py
backend/src/md2deck/stages/: __init__.py  blueprint.py  canva_assets.py  canva_enrich.py  freepik_icons.py  ingest.py  layout_engine.py  master_profiles.py  pptx_animations.py  render.py  slide_placeholders.py  storyliner.py  theme.py  validate.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DropZone.tsx  SlidePreview.tsx  TelemetryStrip.tsx  TemplateSelector.tsx  WizardStepper.tsx
frontend/src/lib/: api.ts
